--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ logging.level.org.springframework=INFO
 
 spring.profiles.active=production
 
-#server.port=${PORT:8080}
+server.port=${PORT:5000}
 
 spring.datasource.url=jdbc:postgresql://ec2-54-246-85-151.eu-west-1.compute.amazonaws.com:5432/dp4db1qjs07js
 spring.datasource.username=azjfxkjtcuzohc
