--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,6 @@
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=10
 
-
-
 logging.level.org.springframework=INFO
 
 spring.profiles.active=production
@@ -18,3 +16,15 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
+
+# config SSL/TLS
+server.ssl.key-store: src/main/resources/keystore.p12
+server.ssl.key-store-password: 123456
+server.ssl.keyAlias: tomcat
+
+# config facebook social
+facebook.app.id=206735400384185
+facebook.app.secret=6e3851325fb081c575286440a3503d7d
+facebook.redirect.uri=https://localhost:5000/oath
+facebook.link.get.token=https://graph.facebook.com/oauth/access_token?client_id=%s&client_secret=%s&redirect_uri=%s&code=%s
+
