fix https cho heroku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,10 +17,10 @@ spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
 
-# config SSL/TLS
-server.ssl.key-store: src/main/resources/keystore.p12
-server.ssl.key-store-password: 123456
-server.ssl.keyAlias: tomcat
+## config SSL/TLS
+#server.ssl.key-store: src/main/resources/keystore.p12
+#server.ssl.key-store-password: 123456
+#server.ssl.keyAlias: tomcat
 
 # config facebook social
 facebook.app.id=206735400384185
