--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,6 @@ spring.jpa.hibernate.ddl-auto = update
 # config facebook social
 facebook.app.id=206735400384185
 facebook.app.secret=6e3851325fb081c575286440a3503d7d
-facebook.redirect.uri=https://localhost:5000/oath
+facebook.redirect.uri=https://serverforfun.herokuapp.com/oath
 facebook.link.get.token=https://graph.facebook.com/oauth/access_token?client_id=%s&client_secret=%s&redirect_uri=%s&code=%s
 
